--- a/reader/package.json
+++ b/reader/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bn.js": "^4.12.1",
+    "ethereumjs-account": "^3.0.0",
     "ethereumjs-util": "^7.1.5",
     "level": "^8.0.1",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "merkle-patricia-tree": "^4.2.4"
   }
 }
