reader MVP, synchronizer brainstorming + flowchart

--- a/synchronizer/Cargo.toml
+++ b/synchronizer/Cargo.toml
@@ -4,3 +4,20 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+alloy = { version = "0.2.1", features = [
+    "full",
+    "node-bindings",
+    "rpc-types-debug",
+    "rpc-types-trace",
+    "json-rpc",
+    "rpc-client",
+    "signer-aws",
+    "signer-keystore",
+    "signer-ledger",
+    "signer-mnemonic",
+    "signer-trezor",
+    "signer-yubihsm",
+    "rlp",
+    "transports",
+] }
+tokio = { version = "1.41.1", features = ["full"] }
